# beanbrain

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: _helpers.py  avatars.py  brew_setups.py  coffees.py  descriptors.py  equipment.py  grinder_settings.py  grinders.py  origins.py  reviews.py  roasteries.py  scrape.py  tasters.py  tastings.py
backend/app/scrapers/: base.py  madheads.py  registry.py
backend/migrations/: env.py
backend/migrations/versions/: 1692efa4dbc4_add_avatar_to_taster_grinder_brewsetup.py  34823d51c675_drop_is_default_from_grinders_and_brew_.py  3817fe24fdf7_baseline_schema.py  5708f4e75ba9_add_grinder_range_and_step.py  5f94067f351a_rename_equipment_fields_manufacturer_.py  b597de861e84_add_brew_setup_id_to_reviews.py
backend/tests/: conftest.py  test_brew_setups.py  test_coffee_list.py  test_coffees.py  test_descriptors.py  test_grinder_settings.py  test_grinders.py  test_health.py  test_origins.py  test_refresh.py  test_retry.py  test_reviews.py  test_roasteries.py  test_scrape.py  test_tasters.py  test_tastings.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  contextStore.ts  i18n.ts  lang.ts  modeStore.ts  personStore.ts  refData.ts  utils.ts
frontend/src/lib/components/: AddBrewSetupPanel.svelte  AddCoffeePanel.svelte  Icons.svelte  (+26 more)
frontend/src/routes/: +layout.svelte  +page.svelte
(+2 files in other folders)
