[project]
name = "beanbrain"
version = "0.3.4"
description = "Coffee tracking tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.4",
    "httpx>=0.28.1",
    "alembic>=1.18.4",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.15.7",
]
